# Nuclei2CSF

./: .editorconfig  .~lock.findings.csv#  README.md  findings.csv  nuc2csf.py  nuclei_output.json  pyproject.toml
